--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .button {
+    @apply bg-sage-400 text-white hover:bg-sage-100 font-semibold py-2 px-4 rounded-md cursor-pointer;
+  }
+}
