--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,4 +6,16 @@
   .button {
     @apply bg-sage-400 text-white hover:bg-sage-100 font-semibold py-2 px-4 rounded-md cursor-pointer;
   }
+
+  .markdown ol li {
+    @apply font-medium text-lg ml-6 pt-3 list-decimal;
+  }
+
+  .markdown h2 {
+    @apply font-semibold text-xl pt-3;
+  }
+
+  .markdown p {
+    @apply font-light py-2;
+  }
 }
